--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -1,5 +1,5 @@
  <%= render "menu/#{@site.menu_type}" %>
 <div id="content">
-	<%= @page.template.html.html_safe %>
+	<%= @body.html_safe %>
 </div>
 
