--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -19,8 +19,8 @@
         <td><%= site.menu_type %></td>
         <td><%= site.title %></td>
         <td><%= link_to 'Show', site %></td>
-        <td><%= link_to 'Edit', edit_site_path(site) %></td>
-        <td><%= link_to 'Destroy', site, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Edit', edit_site_page_path(site, site.first_page) %></td>
+        <td><%= link_to 'Destroy', site, method: :delete %></td>
       </tr>
     <% end %>
   </tbody>
