--- a/app/views/pages/edit.html.erb
+++ b/app/views/pages/edit.html.erb
@@ -17,63 +17,36 @@
 	-moz-border-radius:5px;
 	-webkit-border-radius:5px;
 }
- .dragbox h2{
-	margin:0;
-	font-size:12px;
-	padding:5px;
-	background:#f0f0f0;
-	color:#000;
-	border-bottom:1px solid #eee;
-	font-family:Verdana;
-	cursor:move;
-}
-.dragbox-content{
-	background:#fff;
-	min-height:100px; margin:5px;
-	font-family:'Lucida Grande', Verdana; font-size:0.8em; line-height:1.5em;
-}
 .column  .placeholder{
 	background: #f0f0f0;
 	border:1px dashed #ddd;
 }
-.dragbox h2.collapse{
-	background:#f0f0f0;
+
+div iframe{
+		display:block; 
+		margin:10px 1% 10px 1%;
+		width:98%;
 }
-.dragbox h2 .configure{
-	font-size:11px; font-weight:normal;
-	margin-right:30px; float:right;
+.panel {
+	margin:10px 10px 10px 10px;
+	border-bottom:1px solid #eee;
 }
 </style>
-<style>
 
-  #droppable { margin:5px 2px  20px;
-	background:#fff;
-	border:1px solid #ddd;  }
-  </style>
-<style type="text/css">
-.items{float:left;}
-.items div{width:50px;background:#444;color:#fff;margin-bottom:4px;padding:6px;text-align:center}
-
-.content{width:500px;min-height:500px;background:#eee;position:absolute;left:70px;padding:10px}
-
-.items .block,
-.content .block{height:100px!important;background:#bbb;margin-bottom:10px;width:500px;color:#000}
-
-/* style the sortable placeholder */
-.content .block-placeholder{height:98px!important;border:1px dotted black;margin-bottom:10px;width:498px;}
-</style>
-
+<div class="row">
+	<div class="panel panel-default">
+  <div class="panel-body">
+    Basic panel example
+  </div>
+</div>
+</div>
 <div class="row">
   <div class="col-xs-6 col-md-4">
   	<div class="btn-toolbar">
 	  <div class="btn-group-vertical">
-	      <a href="#" class="btn btn-inverse">Text</a>
-	      <a href="#" class="btn btn-inverse">Image</a>
-	      <a href="#" class="btn btn-inverse">Table</a>
-	      <i class="fa fa-picture-o fa-2x" aria-hidden="true"></i>
-	  </div>
-	  <div class="btn-group">
-	      <a href="#" class="btn btn-inverse"><i class="icon-white icon-trash"></i></a>
+	       <button class="btn"><i class="fa fa-picture-o fa-2x" aria-hidden="true"></i></button>
+	      <button class="btn"><i class="fa fa-youtube-play fa-2x" aria-hidden="true"></i></button>
+	      <button class="btn"><i class="fa fa-font fa-2x" aria-hidden="true"></i></button>
 	  </div>
 	</div>
   </div>
@@ -104,6 +77,7 @@ function pageLoad() {
     $('.edit_area').editable(function(value, settings) {
     	console.log(this);
     	console.log(value);
+    	
     	return(value);
   	}, {
   		// data:  function(value, settings) {
@@ -111,6 +85,11 @@ function pageLoad() {
    	// 	},
   		indicator : 'Saving...',
     	tooltip   : 'Click to edit...',
+    	callback : function(value, settings) {
+    		console.log("callback");
+    		updateWidgetData();
+
+     }
   	}); 
 
   }
@@ -125,11 +104,9 @@ function pageLoad() {
 	    forcePlaceholderSize: true,  
 	    opacity: 0.4, 
 	    update: function(event, ui){  
-	    	// console.log("!!!!")
 	    	 ui.item.attr('style','');
 	    	 pageLoad();
-	    	// console.log(ui.item)
-	    	//ui.item.addClass("dragbox")
+
 	    },
 	    stop: function(event, ui){  
            console.log("stop")
@@ -151,7 +128,6 @@ function pageLoad() {
 	          type: $(this).data('type'),
 	          div_id: columnId  
 	        }; 
-	        console.log("item", $(this).text())
 	        if (item["type"] == "markdown_text") {
 	        	item["markdown"] = $(this).text();
 	        } 
