--- a/app/views/menu/_horizontal.html.erb
+++ b/app/views/menu/_horizontal.html.erb
@@ -1,10 +1,12 @@
-<nav class="navbar navbar-light bg-faded">
-  <a class="navbar-brand" href="#">Navbar</a>
-  <ul class="nav navbar-nav">
-    <% @site.pages.each do |page| %>
-    <li class="nav-item">
-      <a class="nav-link" href="#"><%= page.title %></a>
-    </li>
-    <% end %>
-  </ul>
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">WebSiteName</a>
+    </div>
+    <ul class="nav navbar-nav">
+    	<% @site.pages.each do |page| %>
+      <li><a href="#"><%= page.title %></a></li>
+       <% end %>
+    </ul>
+  </div>
 </nav>
