--- a/app/views/pictures/_form.html.erb
+++ b/app/views/pictures/_form.html.erb
@@ -1,18 +1,8 @@
-<%= form_for(@picture) do |f| %>
-  <% if @picture.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@picture.errors.count, "error") %> prohibited this picture from being saved:</h2>
 
-      <ul>
-      <% @picture.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-  <div class="field">
-    <%= f.file_field :image %>  </div>
-  <div class="actions">
-    <%= f.submit %>
+ <%= form_for @picture, remote: true, html: { style: "display:inline;", multipart: true, class: "dropzone" } do |f| %>
+     <div class="fallback">
+    <%= f.file_field :image %><br>
+    <%= f.submit "Upload" %>
   </div>
-<% end %>
+
+    <% end %>
