--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -12,6 +12,7 @@
   <tbody>
     <% @pictures.each do |picture| %>
       <tr>
+        <td><%= image_tag picture.image.thumb('100x100#').url %><td>
         <td><%= link_to 'Show', picture %></td>
         <td><%= link_to 'Edit', edit_picture_path(picture) %></td>
         <td><%= link_to 'Destroy', picture, method: :delete, data: { confirm: 'Are you sure?' } %></td>
