--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,15 +18,22 @@
       <li><a href="#">Page 2</a></li>
       <li>
         <%= form_tag "search", method: "get" do %>
-            <%= label_tag :search, "Search for:" %>
             <%= text_field_tag :search, params[:search] %>
             <%= submit_tag "Search", :name => nil %>
         <% end %>
       </li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
-      <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-      <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+      <li>
+        <%= link_to sites_path do %>
+            <span class="glyphicon glyphicon-user"></span> Sign Up
+        <% end %>
+      </li>
+      <li>
+        <%= link_to users_path do %>
+            <span class="glyphicon glyphicon-log-in"></span> Log In
+        <% end %>
+      </li>
     </ul>
   </div>
 </nav>
