--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">WebSiteName</a>
+      <%= link_to 'SiteBuilder', index_path, class: "navbar-brand" %>
     </div>
     <ul class="nav navbar-nav">
       <li class="active"><a href="#">Home</a></li>
@@ -24,16 +24,8 @@
       </li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
-      <li>
-        <%= link_to sites_path do %>
-            <span class="glyphicon glyphicon-user"></span> Sign Up
-        <% end %>
-      </li>
-      <li>
-        <%= link_to users_path do %>
-            <span class="glyphicon glyphicon-log-in"></span> Log In
-        <% end %>
-      </li>
+        <li><%= render 'devise/menu/registration_items' %></li>
+        <li><%= render 'devise/menu/login_items'%></li>
     </ul>
   </div>
 </nav>
