--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,18 +1,20 @@
 <link rel="stylesheet" type="text/css" href="jqcloud.css" />
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
-<script type="text/javascript" src="jqcloud-1.0.4.js"></script>
-<script type="text/javascript">
+<%= javascript_include_tag('jqcloud.js') %>
 
+<script type="text/javascript">
+  /*!
+   * Create an array of word objects, each representing a word in the cloud
+   */
   var word_array = [
-    {text: "Lorem", weight: 15},
     <% Hashtag.all.each do |hashtag| %>
-      {text: <%= hashtag.tag %>, weight: <%= hashtag.weight %>}
+      {text: "<%= hashtag.tag %>", weight: <%= hashtag.weight %>, link: "<%= search_path %>" },
     <% end %>
   ];
 
   $(function() {
     // When DOM is ready, select the container element and call the jQCloud method, passing the array of words as the first argument.
-    $("#example").jQCloud(word_array);
+    $("#example").jQCloud(word_array, {});
   });
 </script><!-- You should explicitly specify the dimensions of the container element -->
 <div id="example" style="width: 550px; height: 350px; color: black;"></div>
